--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,12 @@
     "compilerOptions": {
         "baseUrl": "./pages"
     },
-    "include": ["pages"]
+    "include": [
+        "pages/**/*.js",
+        "redux/**/*.js", "redux/reducers/api/userApi.ts"],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
+    
 }
