--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.24.0",
     "framer-motion": "^6.2.9",
     "g": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
