--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "soccer-app",
+  "name": "soccer-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 5000",
-    "lint": "next lint",
-    "app": "node app"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.19.3",
@@ -18,10 +16,10 @@
     "framer-motion": "^6.2.9",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "next": "12.1.5",
     "next-redux-wrapper": "^7.0.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
